# snowflake-utils

./: CHANGELOG.md  README.md  pyproject.toml
.github/: settings.yml
.github/workflows/: ci.yml
snowflake_utils/: __main__.py  models.py  queries.py  settings.py
snowflake_utils/models/: __init__.py  column.py  enums.py  file_format.py  schema.py  table.py  table_structure.py
tests/: conftest.py  test_models.py  test_settings.py
tests/cassettes/: test_bulk_insert.yaml  test_copy_custom.yaml  test_copy_full_existing_table.yaml  test_copy_full_refresh.yaml  test_copy_json_blob.yaml  test_copy_with_tags.yaml  test_create_or_replace_table.yaml  test_create_schema.yaml  test_create_table_if_not_exists.yaml  test_infer_schema.yaml  test_infer_schema_full_refresh.yaml  test_infer_schema_with_evolution.yaml  test_infer_schema_with_metadata.yaml  test_infer_schema_with_parquet.yaml  test_merge.yaml  test_merge_custom.yaml  test_schema_tables.yaml  test_single_column_update.yaml  test_temporary_external_stage_creation.yaml  test_use_existing_stage.yaml
