[project]
name = "snowflake-utils"
version = "1.24.6"
description = ""
authors = [
    { name = "Eli Yarson", email = "eli.yarsonnabhan@remote.com" },
    { name = "Paolo Quadri", email = "paolo.quadri@remote.com" },
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
dependencies = [
    "snowflake-connector-python[secure-local-storage]>=3.12.1,<4",
    "pydantic-settings>=2.2.1,<3",
    "typer>=0.16.0,<0.17",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1,<9",
    "ruff>=0.11.2,<0.12",
    "snowflake-vcrpy",
    "urllib3<2.0",
]

[tool.uv]

[tool.uv.sources]
snowflake-vcrpy = { git = "https://github.com/Snowflake-Labs/snowflake-vcrpy.git", rev = "50c7de2378177c39318f10eaba67e82f6fd8af39" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]

[tool.ruff]
lint.extend-select = ["I"]
